# DjangoProject

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
catalog/: models.py
catalog/migrations/: 0001_initial.py
config/: settings.py  urls.py
